Changed TST for BIN

--- a/practicas/practica2/cronologia/Makefile
+++ b/practicas/practica2/cronologia/Makefile
@@ -10,7 +10,7 @@ CPPFLAGS = -Wall -g  -I$(INC) -c
 
 #all: $(BIN)/pruebacronologia
 
-test: $(TST)/test
+test: $(BIN)/test
 # ************ Generación de documentación ******************
 documentacion:
 	doxygen doc/doxys/Doxyfile
@@ -18,19 +18,19 @@ documentacion:
 # ************ Compilación de módulos ************
 #$(BIN)/pruebacronologia:
 
-$(OBJ)/Darray.o : $(SRC)/dinamicArray.cpp $(INC)/dinamicArray.h
-	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/Darray.o $(SRC)/dinamicArray.cpp 
+$(OBJ)/Darray.o : $(SRC)/dinamicArray.cpp $(INC)/dinamicArray.h  $(INC)/historicDate.h
+	$(CXX) $(CPPFLAGS) -o $(OBJ)/Darray.o $(SRC)/dinamicArray.cpp 
 
 
 # ************ Tests ***************
 
 
 $(OBJ)/test.o : $(TST)/test.cpp $(INC)/dinamicArray.h
-	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/test.o $(TST)/test.cpp
+	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/test.o $(TST)/test.cpp 
 
 
-$(TST)/test : $(OBJ)/test.o $(OBJ)/Darray.o 
-	$(CXX) -o $(BIN)/test $(OBJ)/test.o $(OBJ)/Darray.o 
+$(BIN)/test : $(OBJ)/test.o $(OBJ)/Darray.o
+	$(CXX) -o $(BIN)/test $(OBJ)/test.o $(OBJ)/Darray.o  
 
 
 # ************ Limpieza ************
