--- a/practicas/practica2/cronologia/Makefile
+++ b/practicas/practica2/cronologia/Makefile
@@ -10,7 +10,7 @@ CPPFLAGS = -std=c++11 -Wall -g  -I$(INC) -c
 
 all: $(BIN)/pruebacronologia
 
-test: $(BIN)/testDinamic $(BIN)/testChronology $(BIN)/testHistoric
+#test: $(BIN)/testDinamic $(BIN)/testChronology $(BIN)/testHistoric
 # ************ Generación de documentación ******************
 documentacion:
 	doxygen doc/doxys/Doxyfile
@@ -23,9 +23,6 @@ $(BIN)/pruebacronologia : $(OBJ)/pruebacronologia.o $(OBJ)/chronology.o $(OBJ)/h
 	$(CXX) -o $(BIN)/pruebacronologia $(OBJ)/pruebacronologia.o $(OBJ)/chronology.o $(OBJ)/historicDate.o
 
 
-#$(OBJ)/Darray.o : $(SRC)/dinamicArray.cpp $(INC)/dinamicArray.h  $(INC)/historicDate.h
-#	$(CXX) $(CPPFLAGS) -o $(OBJ)/Darray.o $(SRC)/dinamicArray.cpp
-
 $(OBJ)/historicDate.o : $(INC)/historicDate.h $(INC)/dinamicArray.h $(SRC)/historicDate.cpp
 	$(CXX) $(CPPFLAGS) -I./$(INC) -c -o $(OBJ)/historicDate.o $(SRC)/historicDate.cpp
 
@@ -33,32 +30,12 @@ $(OBJ)/chronology.o : $(INC)/chronology.h $(INC)/historicDate.h $(INC)/dinamicAr
 	$(CXX) $(CPPFLAGS) -I./$(INC) -c -o $(OBJ)/chronology.o $(SRC)/chronology.cpp
 
 
-# ************ Tests ***************
-
-
-$(OBJ)/testDinamic.o : $(TST)/testDinamic.cpp $(INC)/dinamicArray.h
-	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/testDinamic.o $(TST)/testDinamic.cpp
-
-$(BIN)/testDinamic : $(OBJ)/testDinamic.o
-	$(CXX) -o $(BIN)/testDinamic $(OBJ)/testDinamic.o
-
-
-$(OBJ)/testHistoric.o : $(TST)/testHistoric.cpp $(INC)/dinamicArray.h $(INC)/historicDate.h
-	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/testHistoric.o $(TST)/testHistoric.cpp
-
-$(BIN)/testHistoric : $(OBJ)/testHistoric.o $(OBJ)/historicDate.o
-	$(CXX) -o $(BIN)/testHistoric $(OBJ)/testHistoric.o $(OBJ)/historicDate.o
-
-
-$(OBJ)/testChronology.o : $(TST)/testChronology.cpp $(INC)/dinamicArray.h $(INC)/historicDate.h $(INC)/chronology.h
-	$(CXX) $(CPPFLAGS) -I./$(INC) -o $(OBJ)/testChronology.o $(TST)/testChronology.cpp
-
-$(BIN)/testChronology : $(OBJ)/testChronology.o $(OBJ)/chronology.o $(OBJ)/historicDate.o
-	$(CXX) -o $(BIN)/testChronology $(OBJ)/testChronology.o $(OBJ)/chronology.o $(OBJ)/historicDate.o
-
 # ************ Limpieza ************
 clean :
 	-rm $(OBJ)/* $(SRC)/*~ $(INC)/*~ ./*~
 
 mrproper : clean
 	-rm $(BIN)/* doc/html/*
+
+zip: mrproper
+	tar -cvzf practica3.tgz .
